# otus_homeworks

./: .dockerignore  .gitignore  docker-compose.yaml  pyproject.toml  requirements.txt  ruff.toml
app/: .env.default  config.py  main.py
app/alembic/: env.py
app/alembic/versions/: 2025_10_06_1529-d1c3d9a4ebeb_create_user_model.py
app/database/: core.py  crud.py
app/database/models/: __init__.py  base.py  user.py
app/templates/: index.html
docker-build/app/: Dockerfile  entrypoint.sh
docker-build/db/: Dockerfile
homework_04/: jsonplaceholder_requests.py  main.py  models.py
